# nbacktest

./: README.md  pyproject.toml
backtest/: exceptions.py
examples/: Example Buy and Hold.ipynb  Example Real Broker.ipynb  Example SMA Cross Trade OLD.ipynb  Example SMA Cross Trade.ipynb  Example Strategy Backtest.ipynb  one stock backtest.ipynb
nbacktest/: __init__.py  nbacktest.py  utils.py
nbacktest/backtest/: __init__.py  engine.py
nbacktest/core/: __init__.py  backtest.py  broker.py  entities.py  strategy.py
