[project]
name = "nbacktest"
version = "1.2.0"
authors = [
  {name="Ninebel"},
]
description = "A Python library for backtesting stocks"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.23.5",
    "pandas>=2",
    "statsmodels>=0.14",
]
[project.urls]
"Homepage" = "https://github.com/ninebel/nbacktest"

